<resources>
    <string name="app_name">LC Autoservice</string>
    <string name="goToCarInfoButton">Enter Car Information</string>
    <string name="trademark">Trademark</string>
    <string name="model">Model</string>
    <string name="submit">Submit</string>
    <string name="year">Year</string>
    <string name="kilometers">Kilometers</string>
    <string name="get_quote">Get Quote</string>
    <string name="textview">TextView</string>
    <string name="save">Save</string>
    <string name="luis_cedeno_logo">luis cedeno logo</string>
    <string name="facebook_logo">facebook_logo</string>
    <string name="webpage_logo">webpage_logo</string>
    <string name="instagram_logo">instagram_logo</string>
    <string name="esta_aplicacion_es_para_obtener_una_lista_de_procedimientos_mecanicos_que_necesita_mi_automovil_de_acuerdo_con_la_marca_modelo_a_o_y_kilometraje">Esta aplicacion es para obtener una lista de procedimientos mecanicos que necesita mi automovil de acuerdo con la marca, modelo, año y kilometraje.</string>
    <string name="loading">Loading</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="a_o">Año</string>
    <string name="kilometros">Kilometros</string>
    <string name="save_pdf">Save PDF</string>
    <string name="logo">LOGO</string>
</resources>