<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="355dp"
        android:layout_height="83dp"
        android:contentDescription="@string/luis_cedeno_logo"
        android:src="@drawable/logo_lc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goToCarInfoButton"
        android:layout_width="296dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:text="@string/goToCarInfoButton"
        android:textSize="18sp"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.915" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginTop="15dp"
        android:background="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginBottom="15dp"
        android:background="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/goFacebook"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="64dp"
        android:clickable="true"
        android:contentDescription="@string/facebook_logo"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.609"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/goWebsite"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:clickable="true"
        android:contentDescription="@string/webpage_logo"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/goInstagram"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@+id/goFacebook"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.609"
        app:srcCompat="@drawable/browser" />

    <ImageView
        android:id="@+id/goInstagram"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="64dp"
        android:clickable="true"
        android:contentDescription="@string/instagram_logo"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.609"
        app:srcCompat="@drawable/instagram" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="208dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="250dp"
        android:layout_height="189dp"
        android:text="@string/esta_aplicacion_es_para_obtener_una_lista_de_procedimientos_mecanicos_que_necesita_mi_automovil_de_acuerdo_con_la_marca_modelo_a_o_y_kilometraje"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/goToCarInfoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>